--- a/css/client/aa-shortcode.less
+++ b/css/client/aa-shortcode.less
@@ -9,6 +9,7 @@ html{
 	min-height: 100%;
 }
 body{
+	position: relative;
 	min-height: 100%;
 	.gradient-direction(#7CD1B4, #0C386A, 45); 
 //	background-color: #0C386A;
@@ -20,6 +21,47 @@ body{
 //	.gradient-direction(#0C386A, #7CD1B4, 0); 
 }
 
+#aa-loading{
+	position:absolute;
+	top:10px;
+	left:10px;
+	width:50px;
+	height:50px;
+	z-index: 999;
+	&.aa-fe-loading{
+		position: absolute;
+		padding: inherit;
+		&:before {
+			z-index: 556;
+			position: absolute;
+			top: 0%;
+			left: 50%;
+			display: block;
+			line-height: 2rem;
+			font-size: 2rem;
+	//		margin-top: 2.5rem;
+			font-family: 'FontAwesome';
+			content: "\f021";
+			.animate (fa-spin, 1s, linear, 0, infinite, normal);
+	//		-webkit-animation: fa-spin 1s infinite linear;
+			animation: fa-spin 1s infinite linear;
+			text-align: center;
+			color: rgba(0,0,0,.4);
+		}
+		&:after {
+			content: "";
+			z-index: 555;
+			position: absolute;
+			top: 0px;
+			left: 0px;
+			display: block;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, .0);
+			.rounded (3px);
+		}
+	}
+}
 #intro{
 	#intro-header{
 		color: rgba(255, 255, 255, .9);
@@ -237,6 +279,7 @@ body > section{
 		}
 	}
 }
+
 #system-list{
 	article > ul{
 		margin: 0;
@@ -296,6 +339,11 @@ body > section{
 *
 * The most important section of all, and the main purpose of this WP Plugin
 */
+@media print{
+	*.aa-report-chart{
+		height: 180px !important;
+	}
+}
 #report-preview{
 	.container;
 //	border:black thin solid;
@@ -317,8 +365,8 @@ body > section{
 		}
 		.aa-report-chart{
 			.make-xs-column(12);
-			min-height: 300px;
-			margin: 30px auto;
+			height: 300px;
+			margin: 30px auto 15px;
 			padding: 0;
 			a[href="http://www.amcharts.com/javascript-charts/"]{
 				display: none !important;
@@ -338,6 +386,24 @@ body > section{
 					//.fa-spin;
 					.fa-pulse;
 				}
+			}
+		}
+	}
+}
+#system-collab{
+	.aa-add-user-table{
+		a{
+			.list-group-item;
+			&:hover{
+				.list-group-item-success;
+			}
+		}
+	}
+	.aa-current-system-users{
+		& > a{
+			.list-group-item;
+			&:hover{
+				.list-group-item-warning;
 			}
 		}
 	}
